tests/v0-fail/ignore.out
Running <root>/ignore.cli ...

printf "hello\nworld\n"
---
hello
world
---
ERROR: pattern literal at line <root>/ignore.cli:7 does not match output line "world"
[XX] missed sequence { ... }
  [OK]- matched "hello" (ignore)
  [XX]- missed "hello" != "world" (ignore)
  [XX] missed "goodbye" != "world"

❌ FAIL

<root>/ignore.cli FAILED
Error: pattern literal at line <root>/ignore.cli:7 does not match output line "world"

