tests/v0-fail/ignore.cli
#!/usr/bin/env clitest --v0

$ printf "hello\nworld\n"
ignore {
    ! hello
}
! goodbye
